Phase 2 Feature Set (#2)
* Found incorrect API Paths mismatch from Arch markdown

* Broke the phases down a little bit smaller

* Updated Architecture to include more production detail and have a plan for Phase 2 Features

* Phase 2 initial Feature Set

* Correcting Errors from Phase 2 and adding Validations and Rules

* Correctly fail on UUID issues

* Correct some issues with Build

* Corrected a few issues with build and architecture

* Added Rule for ITest items